Fixed the width for graph on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -104,4 +104,8 @@ html {
   .card {
     width: 90%;
   }
+
+  .chart {
+    width: 90%;
+  }
 }
